@@ -16,6 +16,7 @@ version 0.11.0-pre12:
 	* Improved proxy options
 	* Fixed a small issue with HTML not being stripped from
 	  log files properly (Thanks, faceprint and David Stoddard)
+	* Can turn on/off Yahoo! Mail announcements
 
 version 0.11.0-pre11 (04/30/2001):
 	* Zephyr updates and additions, thanks Neil Sanchala (nsanch)
